# softviterbi

./: .gitignore  Makefile  main.c  main.h  readme.md
.github/workflows/: test.yml
python_package/: MANIFEST.in  example.py  pyproject.toml  setup.py
python_package/softviterbi/: __init__.py  _softviterbi.py
tests/: generate_unittest.py  python_package_example.py  requirements.txt  unittest.c  unittest.py
